cosmos/scripts/envoy/templates/envoy_complex_config_final.yaml
# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT License.
# cspell:disable
static_resources:
  listeners:
  - name: admin-listener
    address:
      socket_address:
        protocol: TCP
        address: "0.0.0.0"
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          proxy_status_config:
            set_recommended_response_code: true
            use_node_id: true
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  path: "/ready"
                route:
                  cluster: admin_port_cluster
              - match:
                  path: "/metrics"
                route:
                  cluster: admin_port_cluster
                  prefix_rewrite: "/stats/prometheus"
              - match:
                  prefix: "/"
                direct_response:
                  status: 404
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              # Allow passing `x-envoy-expected-rq-timeout-ms`
              respect_expected_rq_timeout: true
  - name: main-listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 5100
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
            - name: envoy.access_loggers.stream
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                log_format:
                  json_format:
                    access_log_type: "%ACCESS_LOG_TYPE%"
                    bytes_received: "%BYTES_RECEIVED%"
                    bytes_sent: "%BYTES_SENT%"
                    connection_termination_details: "%CONNECTION_TERMINATION_DETAILS%"
                    downstream_transport_failure_reason: "%DOWNSTREAM_TRANSPORT_FAILURE_REASON%"
                    duration: "%DURATION%"
                    protocol: "%PROTOCOL%"
                    req_authority: "%REQ(:AUTHORITY)%"
                    req_duration: "%REQUEST_DURATION%"
                    req_line: "%REQ(X-ENVOY-ORIGINAL-METHOD?:METHOD)% %REQ(:SCHEME)%://%REQ(:AUTHORITY)%%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%"
                    req_method: "%REQ(:METHOD)%"
                    req_content_length: "%REQ(CONTENT-LENGTH)%"
                    req_path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                    route_name: "%ROUTE_NAME%"
                    virtual_cluster: "%VIRTUAL_CLUSTER_NAME%"
                    request_id: "%REQ(X-REQUEST-ID)%"
                    req_user_agent: "%REQ(USER-AGENT)%"
                    resp_cache_control: "%RESP(CACHE-CONTROL)%"
                    resp_code_details: "%RESPONSE_CODE_DETAILS%"
                    resp_code: "%RESPONSE_CODE%"
                    resp_content_type: "%RESP(CONTENT-TYPE)%"
                    resp_flags: "%RESPONSE_FLAGS%"
                    resp_tx_duration: "%RESPONSE_TX_DURATION%"
                    resp_upstream_service_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                    start_time: "%START_TIME%"
                    upstream_host: "%UPSTREAM_HOST%"
                    upstream_protocol: "%UPSTREAM_PROTOCOL%"
                    upstream_peer_tls_issuer: "%UPSTREAM_PEER_ISSUER%"
                    upstream_peer_tls_subject: "%UPSTREAM_PEER_SUBJECT%"
                    upstream_remote_address: "%UPSTREAM_REMOTE_ADDRESS%"
                    upstream_request_attempt_count: "%UPSTREAM_REQUEST_ATTEMPT_COUNT%"
                    upstream_tls_cipher: "%UPSTREAM_TLS_CIPHER%"
                    upstream_transport_failure_reason: "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
                    x_datadog_parent_id: "%REQ(X-DATADOG-PARENT-ID)%"
                    x_datadog_sampling_priority: "%REQ(X-DATADOG-SAMPLING-PRIORITY)%"
                    x_datadog_trace_id: "%REQ(X-DATADOG-TRACE-ID)%"
          stat_prefix: router_http
          # upgrade_configs:
          #   - upgrade_type: CONNECT
          #     enabled: true
          scheme_header_transformation:
            scheme_to_overwrite: https
          strip_any_host_port: true
          proxy_status_config:
            set_recommended_response_code: true
            use_node_id: true
          common_http_protocol_options:
            max_connection_duration: 900s
          drain_timeout: 330s
          stream_idle_timeout: 30s
          route_config:
            name: local_route
            response_headers_to_add:
              - header:
                  key: "via"
                  value: "%ENVIRONMENT(POD_NAME)%"
            virtual_hosts:
            - name: local_aakpandey-stage-nosql
              domains:
              - "aakpandey-stage-nosql.documents-staging.windows-ppe.net"
              routes:
              # - match:
              #     connect_matcher: {}
              #       # authority:
              #       #   suffix: "aakpandey-stage-nosql-eastus2.documents-staging.windows-ppe.net:443"
              #   route:
              #     cluster: aakpandey-stage-nosql
              #     upgrade_configs:
              #     - upgrade_type: CONNECT
              - match:
                  prefix: "/"
                route:
                  cluster: aakpandey-stage-nosql
                  timeout: 300s
                  retry_policy:
                    retry_on: "connect-failure,refused-stream,reset"
                    per_try_timeout: 300s
                    num_retries: 3
            - name: local_aakpandey-stage-nosql-eastus2
              domains:
              - "aakpandey-stage-nosql-eastus2.documents-staging.windows-ppe.net"
              routes:
              # - match:
              #     connect_matcher: {}
              #       # authority:
              #       #   suffix: "aakpandey-stage-nosql-eastus2.documents-staging.windows-ppe.net:443"
              #   route:
              #     cluster: aakpandey-stage-nosql-eastus2
              #     timeout: 300s
              #     retry_policy:
              #       retry_on: "connect-failure,refused-stream,reset"
              #       per_try_timeout: 300s
              #       num_retries: 3          
              #     upgrade_configs:
              #     - upgrade_type: CONNECT
              - match:
                  prefix: "/"
                route:
                  cluster: aakpandey-stage-nosql-eastus2
                  timeout: 300s
                  retry_policy:
                    retry_on: "connect-failure,refused-stream,reset"
                    per_try_timeout: 300s
                    num_retries: 3          
            - name: local_heise
              domains:
              - www.heise.de
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: heise
                  timeout: 300s
                  retry_policy:
                    retry_on: "connect-failure,refused-stream,reset"
                    per_try_timeout: 300s
                    num_retries: 3        
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: aakpandey-stage-nosql-eastus2
    type: STRICT_DNS
    lb_policy: LEAST_REQUEST
    dns_lookup_family: V4_ONLY
    connect_timeout: 5s
    load_assignment:
      cluster_name: aakpandey-stage-nosql-eastus2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                protocol: TCP
                address: aakpandey-stage-nosql-eastus2.documents-staging.windows-ppe.net
                port_value: 443
    circuit_breakers:
      thresholds:
        priority: DEFAULT
        max_connections: 10000
        max_pending_requests: 10000
        max_requests: 10000
        retry_budget:
          budget_percent:
            value: 10.0
          min_retry_concurrency: 10
        track_remaining: true
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        common_http_protocol_options:
          max_connection_duration: 120s
        upstream_http_protocol_options:
          auto_sni: true
          auto_san_validation: true
        auto_config:
          http2_protocol_options:
            max_concurrent_streams: 3
            initial_stream_window_size: 1048576
    transport_socket:
      name: envoy.transport_sockets.tls # required to communicate in HTTPS
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          alpn_protocols: ["http/1.1"]
          validation_context:
            trust_chain_verification: ACCEPT_UNTRUSTED
  - name: aakpandey-stage-nosql
    type: STRICT_DNS
    lb_policy: LEAST_REQUEST
    dns_lookup_family: V4_ONLY
    connect_timeout: 5s
    load_assignment:
      cluster_name: aakpandey-stage-nosql
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                protocol: TCP
                address: aakpandey-stage-nosql.documents-staging.windows-ppe.net
                port_value: 443
    circuit_breakers:
      thresholds:
        priority: DEFAULT
        max_connections: 10000
        max_pending_requests: 10000
        max_requests: 10000
        retry_budget:
          budget_percent:
            value: 10.0
          min_retry_concurrency: 10
        track_remaining: true
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        common_http_protocol_options:
          max_connection_duration: 120s
        upstream_http_protocol_options:
          auto_sni: true
          auto_san_validation: true
        auto_config:
          http2_protocol_options:
            max_concurrent_streams: 3
            initial_stream_window_size: 1048576
    transport_socket:
      name: envoy.transport_sockets.tls # required to communicate in HTTPS
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          alpn_protocols: ["http/1.1"]
          validation_context:
            trust_chain_verification: ACCEPT_UNTRUSTED  
  - name: heise
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: LEAST_REQUEST
    connect_timeout: 5s
    load_assignment:
      cluster_name: heise
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                protocol: TCP
                address: www.heise.de
                port_value: 443
    circuit_breakers:
      thresholds:
        priority: DEFAULT
        max_connections: 10000
        max_pending_requests: 10000
        max_requests: 10000
        retry_budget:
          budget_percent:
            value: 10.0
          min_retry_concurrency: 10
        track_remaining: true
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        common_http_protocol_options:
          max_connection_duration: 120s
        upstream_http_protocol_options:
          auto_sni: true
          auto_san_validation: true
        auto_config:
          http2_protocol_options:
            max_concurrent_streams: 3
            initial_stream_window_size: 1048576
    transport_socket:
      name: envoy.transport_sockets.tls # required to communicate in HTTPS
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          alpn_protocols: ["http/1.1"] 
          validation_context:
            trust_chain_verification: ACCEPT_UNTRUSTED
  - name: admin_port_cluster
    connect_timeout: 5s
    type: LOGICAL_DNS
    load_assignment:
      cluster_name: admin_port_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                protocol: TCP
                address: "127.0.0.1"
                port_value: 9091
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9091
